// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template Migration 1.0.0 should replace LetModule + LetDirective module specifier 1`] = `
"
      import { NgModule } from '@angular/core';
      import { BrowserModule } from '@angular/platform-browser';
      import { AppComponent } from './app.component';
import { LetModule } from '@rx-angular/template/let';
import { LetDirective } from '@rx-angular/template/let';

      @NgModule({
        declarations: [
          AppComponent,
        ],
        imports: [
          BrowserModule,
          LetModule
        ],
        providers: [],
        bootstrap: [AppComponent]
      })
      export class AppModule { }
  "
`;

exports[`Template Migration 1.0.0 should replace PushModule + PushPipe module specifier 1`] = `
"
      import { NgModule } from '@angular/core';
      import { BrowserModule } from '@angular/platform-browser';
      import { AppComponent } from './app.component';
import { PushModule } from '@rx-angular/template/push';
import { PushPipe } from '@rx-angular/template/push';

      @NgModule({
        declarations: [
          AppComponent,
        ],
        imports: [
          BrowserModule,
          PushModule
        ],
        providers: [],
        bootstrap: [AppComponent]
      })
      export class AppModule { }
  "
`;

exports[`Template Migration 1.0.0 should replace UnpatchEventsModule + UnpatchDirective module specifier 1`] = `
"
      import { NgModule } from '@angular/core';
      import { BrowserModule } from '@angular/platform-browser';
      import { AppComponent } from './app.component';
import { UnpatchModule } from '@rx-angular/template/unpatch';
import { UnpatchDirective } from '@rx-angular/template/unpatch';

      @NgModule({
        declarations: [
          AppComponent,
        ],
        imports: [
          BrowserModule,
          UnpatchModule,
        ],
        providers: [],
        bootstrap: [AppComponent]
      })
      export class AppModule { }
  "
`;

exports[`Template Migration 1.0.0 should replace UnpatchEventsModule identifier 1`] = `
"
      import { NgModule } from '@angular/core';
      import { BrowserModule } from '@angular/platform-browser';
      import { AppComponent } from './app.component';
import { LetModule } from '@rx-angular/template/let';
import { PushModule } from '@rx-angular/template/push';
import { UnpatchModule } from '@rx-angular/template/unpatch';

      @NgModule({
        declarations: [
          AppComponent,
        ],
        imports: [
          BrowserModule,
          UnpatchModule,
        ],
        providers: [],
        bootstrap: [AppComponent]
      })
      export class AppModule { }
  "
`;

exports[`Template Migration 1.0.0 should replace all module specifiers 1`] = `
"
      import { NgModule } from '@angular/core';
      import { BrowserModule } from '@angular/platform-browser';
      import { AppComponent } from './app.component';
import { LetModule } from '@rx-angular/template/let';
import { PushModule } from '@rx-angular/template/push';
import { UnpatchModule } from '@rx-angular/template/unpatch';

      @NgModule({
        declarations: [
          AppComponent,
        ],
        imports: [
          BrowserModule,
          UnpatchModule,
        ],
        providers: [],
        bootstrap: [AppComponent]
      })
      export class AppModule { }
  "
`;
